Create order card

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                <p class="main-section__description">Крупнейшее котокафе России, в котором живёт 50 кошек и котов,
                   и каждый
                   из них ищет новый дом. Животных<br> можно гладить, фотографировать, играть с ними.</p>
-               <span class="main-section__work-time">Рабочее время с 8:00 до 23:00</span>
+               <span class="main-section__work-time">Рабочее время с <time>8:00</time> до <time>23:00</time></span>
                <div class="main-section__img">
                   <svg class="location-logo" width="16" height="16">
                      <use xlink:href="#location"></use>
@@ -78,6 +78,7 @@
                   </span>
                </div>
             </div>
+            
             <div class="main-section__picture">
                <div class="main-section__picture--layer">
                   <img src="./img/Frame.png" alt="Girl">
