--- a/gallery.html
+++ b/gallery.html
@@ -98,46 +98,64 @@
       <section class="book-ticket">
          <div class="book-ticket__wrapper">
             <h2 class="book-ticket__title">Купить билет</h2>
-            <div class="book-ticket__order order">
-               <div class="order__hour choose-hour">
-                  <h3 class="choose-hour__title">Продолжительность (часов)</h3>
-                  <ul class="choose-hour__list hour-list">
-                     <li class="hour-list__item1">1</li>
-                     <li class="hour-list__item">2</li>
-                     <li class="hour-list__item">3</li>
-                     <li class="hour-list__item">4</li>
-                     <li class="hour-list__item">5</li>
-                  </ul>
-               </div>
-               <div class="order__card-type card-type">
-                  <h3 class="card-type__title">Тип билета</h3>
-                  <div class="card-type__standart">
-                     <div class="checked"><div class="checked__item"></div></div>
-                     <span>Стандартный</span>
-                     <svg class="sign" width="16" height="10">
-                        <use xlink:href="#button-sign"></use>
-                     </svg>
+            <div class="container">
+               <div class="book-ticket__order order">
+                  <div class="order__hour choose-hour">
+                     <h3 class="choose-hour__title">Продолжительность (часов)</h3>
+                     <ul class="choose-hour__list hour-list">
+                        <li class="hour-list__item1">1</li>
+                        <li class="hour-list__item">2</li>
+                        <li class="hour-list__item">3</li>
+                        <li class="hour-list__item">4</li>
+                        <li class="hour-list__item">5</li>
+                     </ul>
                   </div>
-                  <div class="card-type__vip">
-                     <div class="disabled"></div>
-                     <span>Vip</span>
-                     <svg class="sign" width="16" height="10">
-                        <use xlink:href="#button-sign"></use>
-                     </svg>
+                  <div class="order__card-type card-type">
+                     <h3 class="card-type__title">Тип билета</h3>
+                     <div class="card-type__standart">
+                        <div class="checked">
+                           <div class="checked__item"></div>
+                        </div>
+                        <span>Стандартный</span>
+                        <svg class="sign" width="16" height="10">
+                           <use xlink:href="#button-sign"></use>
+                        </svg>
+                     </div>
+                     <div class="card-type__vip">
+                        <div class="disabled"></div>
+                        <span>Vip</span>
+                        <svg class="sign" width="16" height="10">
+                           <use xlink:href="#button-sign"></use>
+                        </svg>
+                     </div>
                   </div>
+                  <div class="order__cost cost">
+                     <h4 class="cost__title">Цена</h4>
+                     <p class="cost__description">3000 руб.</p>
+                  </div>
+                  <button type="submit" class="order__main-button">
+                     Купить билет
+                  </button>
                </div>
-               <div class="order__cost cost">
-                  <h4 class="cost__title">Цена</h4>
-                  <p class="cost__description">3000 руб.</p>
-               </div>
-               <button type="submit" class="order__main-button">
-                  Купить билет
-               </button>
+               <img class="last-picture__item2" src="./img/gallery-cat.png" alt="">
+               <img class="last-picture__item" src="./img/book-ticket.png" alt="">
             </div>
          </div>
-
-         <div class="book-ticket__image">
       </section>
+      <footer class="site-footer">
+         <div class="wrapper">
+            <div class="site-footer__logo">
+               <svg width="44" height="40">
+                  <use xlink:href="#logo"></use>
+               </svg>
+   
+               <span>Котокафе</span>
+            </div>
+            <div class="create-date">
+               Создано 2021
+            </div>
+         </div>
+      </footer>
 
    </main>
 </body>
