--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                d="M34.1379 30.1208C34.1379 34.6657 31.7862 38.4846 26.5517 39.5672C25.5822 39.7675 23.0476 35.3227 22 35.3227C20.9523 35.3227 18.4178 39.7675 17.4483 39.5672C12.2138 38.4846 9.86206 34.6657 9.86206 30.1208C9.86206 24.7339 15.2961 17.1158 22 17.1158C28.7039 17.1158 34.1379 24.7339 34.1379 30.1208Z"
                fill="#FFB334" />
          </symbol>
-
          <symbol id="location" width="16" height="17" viewBox="0 0 16 17" fill="none">
             <g clip-path="url(#clip0_9_43)">
                <path
@@ -42,54 +41,48 @@
                </clipPath>
             </defs>
          </symbol>
-
       </svg>
-
-
    </div>
    <header class="main-header">
       <div class="wrapper">
-         <div class="main-header__logo">
+         <a href="index.html" class="main-header__logo">
             <svg width="44" height="40">
                <use xlink:href="#logo"></use>
             </svg>
             <span>Котокафе</span>
-         </div>
+         </a>
          <a class="main-header__link" href="gallery.html">Купить билет</a>
       </div>
    </header>
 
    <main class="page-main">
-      <section class="main-section">
+      <section class="about">
          <div class="wrapper">
-            <div class="main-section__information">
-               <h2 class="main-section__title">Первое в России котокафе</h2>
-               <p class="main-section__description">Крупнейшее котокафе России, в котором живёт 50 кошек и котов,
+            <div class="about__information">
+               <h2 class="about__title">Первое в России котокафе</h2>
+               <p class="about__description">Крупнейшее котокафе России, в котором живёт 50 кошек и котов,
                   и каждый
                   из них ищет новый дом. Животных<br> можно гладить, фотографировать, играть с ними.</p>
-               <span class="main-section__work-time">Рабочее время с <time>8:00</time> до <time>23:00</time></span>
-               <div class="main-section__img">
+               <span class="about__work-time">Рабочее время с <time>8:00</time> до <time>23:00</time></span>
+               <p class="about__img">
                   <svg class="location-logo" width="16" height="16">
                      <use xlink:href="#location"></use>
                   </svg>
-
-                  <span class="main-section__location">
+                  <span class="about__location">
                      Санкт-Петербург, набережная реки Карповки, дом 5, литера П
                   </span>
-               </div>
+               </p>
             </div>
-            
-            <div class="main-section__picture">
-               <div class="main-section__picture--layer">
+            <div class="about__picture">
+               <div class="about__picture--layer">
                   <img src="./img/Frame.png" alt="Girl">
                </div>
-               <div class="main-section__picture--frame">
+               <div class="about__picture--frame">
                   <img src="./img/layer.svg" alt="">
                </div>
             </div>
          </div>
       </section>
-
       <section class="our-stars">
          <img class="hand" src="./img/hand.svg" width="213" alt="" draggable="false">
          <img class="vector" src="./img/Vector.png" alt="" draggable="false">
@@ -125,18 +118,18 @@
 
    </main>
 
-   <footer class="site-footer">
+   <footer class="main-footer">
       <div class="wrapper">
-         <div class="site-footer__logo">
+         <div class="main-footer__logo">
             <svg width="44" height="40">
                <use xlink:href="#logo"></use>
             </svg>
 
             <span>Котокафе</span>
          </div>
-         <div class="create-date">
+         <span class="create-date">
             Создано 2021
-         </div>
+         </span>
       </div>
    </footer>
 </body>
